Abandoned select option is reselected when shift selecting new options https://bugs.webkit.org/show_bug.cgi?id=137553

Patch by Pascal Jacquemart <p.jacquemart@samsung.com> on 2014-10-28
Reviewed by Ryosuke Niwa.

Source/WebCore:

Previous active selection is wrongly recorded by HTMLSelectElement after selecting a new item using
typeAhead. Fixed by clearing previously selected options before starting a new active selection.

Test: fast/forms/listbox-selection-after-typeahead.html

* html/HTMLSelectElement.cpp:
(WebCore::HTMLSelectElement::selectOption): Code re-ordering

LayoutTests:

Test checking a combination of mouse and keyboard selection events
on select-multiple element

* fast/forms/listbox-selection-after-typeahead-expected.txt: Added.
* fast/forms/listbox-selection-after-typeahead.html: Added.

Canonical link: https://commits.webkit.org/155989@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175263 268f45cc-cd09-0410-ab3c-d52691b4dbfc